Fixing scrollbars in the code blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -488,3 +488,23 @@ div.hljs-copy-container{
 .filename-top > p{
   display:none;
 }
+
+
+/* Scrollbar for code blocks */
+/* width */
+code::-webkit-scrollbar {
+  height:5px;
+}
+/* Track */
+code::-webkit-scrollbar-track {
+  background: transparent; 
+}
+/* Handle */
+code::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.1); 
+  border-radius:10px;
+}
+/* Handle on hover */
+code::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.14);
+}
